# invention

./: a.ipynb  b.ipynb  c.ipynb  名称未設54654定-1.ai
3D_lattice_surgery/: README.md
3D_lattice_surgery copy/emulator/: CMakeLists.txt
3D_lattice_surgery copy/emulator/placement/: dump_file.cpp  main.cpp
3D_lattice_surgery copy/emulator/routing/: CMakeLists.txt  Makefile  distance.txt  instruction_allocate.h  instruction_base.h  instruction_dest_meas.h  instruction_hadamard.h  instruction_meas_twist.h  instruction_queue.h  instruction_release.h  instruction_surgery.h  load_file.cpp  main.cpp  placement.txt  position.h  qubit_space_search.h  register_quantum.h  result.txt  temp.txt
3D_lattice_surgery/circuit_synth/: generate_circuit.py
3D_lattice_surgery/emulator/: CMakeLists.txt  temp.txt
3D_lattice_surgery/emulator/placement/: CMakeLists.txt  placement.cpp  utility.h
3D_lattice_surgery/emulator/routing/: distance.txt  distance_plot.eps  instruction.h  instruction_allocate_magic.h  instruction_phase_twist.h  load_file.cpp  placement.txt  plot_distance.py  qubit_space.h  register_classical.h  result.txt  simulator.h  temp.txt  utility.cpp  utility.h
latex/3D_lattice_surgery/: document 1.aux  document 1.fdb_latexmk  document 1.fls  document 1.tex  figure1.eps  figure2.eps  figure3.eps  figure4.eps  figure5.eps  figure6.eps  lualatex8136.fls
latex/A3/: A3.aux  A3.fdb_latexmk  A3.fls  A3.tex  b-1.pdf.aux  b-1pdf.aux
latex/B4/: B4.aux  B4.blg  B4.dvi  B4.fdb_latexmk  B4.fls  B4.tex  data.aux  data.fdb_latexmk  data.fls  data.tex
latex/B5/: B5-figure0.md5  B5-figure1.md5  B5-figure2.md5  B5-figure3.md5  B5-figure4.md5  B5-figure5.md5  B5-figure6.md5  B5-figure7.md5  B5.aux  B5.fdb_latexmk  B5.fls  B5.tex  data1.aux  data1.tex  data2.aux  data2.fdb_latexmk  data2.fls  data2.tex  data3.aux  data3.fdb_latexmk  data3.fls  data3.tex  data4.aux  data4.fdb_latexmk  data4.fls  data4.tex  data5.aux  data5.fdb_latexmk  data5.fls  data5.tex  data6.aux  data6.fdb_latexmk  data6.fls  data6.tex  data7.aux  data7.fdb_latexmk  data7.fls  data7.tex  data8.aux  data8.tex
latex/D4/: D4-figure0.md5  D4-figure1.md5  D4-figure2.md5  D4.aux  D4.fdb_latexmk  D4.fls  D4.tex  data1.aux  data1.fdb_latexmk  data1.fls  data1.tex  data2.aux  data2.fdb_latexmk  data2.fls  data2.tex  data3.aux  data3.fdb_latexmk  data3.fls  data3.tex  figure1.eps  figure2.eps  figure3.eps  figure4.eps  figure5.eps
latex/E2/: E2-figure0.md5  E2-figure1.md5  E2-figure10.md5  E2-figure11.md5  E2-figure12.md5  E2-figure13.md5  E2-figure14.md5  E2-figure15.md5  E2-figure16.md5  E2-figure17.md5  E2-figure18.md5  E2-figure2.md5  E2-figure3.md5  E2-figure4.md5  E2-figure5.md5  E2-figure6.md5  E2-figure7.md5  E2-figure8.md5  E2-figure9.md5  E2.aux  E2.fdb_latexmk  E2.fls  E2.tex  [.aux  data1.aux  data1.tex  data10.aux  data10.tex  data11.aux  data11.tex  data12.aux  data12.tex  data13.aux  data13.tex  data14.aux  data14.tex  data15.aux  data15.tex  data16.aux  data16.tex  (+46 more)
latex/E4/: E4 2.fls  E4-figure0.md5  E4-figure1.md5  E4-figure2.md5  E4-figure3.md5  E4-figure4.md5  E4.aux  E4.fdb_latexmk  E4.fls  E4.tex  Untitled-1.eps  data1.aux  data1.tex  data2.aux  data2.tex  data3.aux  data3.fls  (+11 more)
lattice_surgery/: README.md
lattice_surgery/emulator/: CMakeLists.txt  distance.txt  distance_2D_optimized.txt  distance_optimized.txt  placement.txt  plot.py  plot_distance.py  result.txt  result_optimized.txt  temp.txt
lattice_surgery/emulator/src/: CMakeLists.txt
lattice_surgery/emulator/src/placement/: CMakeLists.txt  load_file.cpp
lattice_surgery/emulator/src/routing/: CMakeLists.txt  common.h  instruction_allocate_magic.h  instruction_base.h  instruction_dest_meas.h  instruction_phase_twist.h  instruction_release.h  instruction_surgery.h  load_file.cpp  main.cpp  qubit_plane.h  qubit_plane_search.h  register_quantum.h  simulator.h  utility.cpp
placement_optimization_in_mac/placement_optimization4/: CMakeLists.txt  graph.dot  graph.h  qubit_count.cpp
stim/: flouqet_color_code.ipynb  getting_started.ipynb  my_problem.wcnf  no_error_surface_code.ipynb  output.txt  output1.txt  output_floquet.txt  output_surface_code.txt  output_unf.txt  output_unf_miss_d5.txt  output_unf_new_d3.txt  output_unf_new_d3_1.txt  output_unf_new_d3_2.txt  pyvenv.cfg  stim copy.ipynb  stim.ipynb  stim1.ipynb  sum.txt  surface_code.ipynb  unfolding_color_code.ipynb  unfolding_color_code_3.ipynb  unfolding_color_code_with_flag.ipynb
(+857 files in other folders)
